@@ -1,5 +1,9 @@
 2000-01-20  Matti Aarnio  <mea@mea.tmt.tele.fi>
 
+	* utils/listexpand.c:
+	    Added parametrization on how large bundles to make.
+	    Default is the same old 200..
+
 	* transports/smtp/smtp.c:
 	    Turned out that Linux glibc 2.1 getaddrinfo() has some
 	    strange bugs when it is left to its devices to scan for
